[gd_scene load_steps=3 format=3 uid="uid://canvas_painter_ui_001"]

[ext_resource type="Script" path="res://src/ui/canvas_painter_ui.gd" id="1_canvas_ui"]
[ext_resource type="PackedScene" uid="uid://canvas_painter_viewport_001" path="res://src/ui/CanvasPainterViewport3D.tscn" id="2_canvas_viewport"]

[node name="CanvasPainterUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_canvas_ui")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Canvas Painter"
horizontal_alignment = 1

[node name="CanvasViewport" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_canvas_viewport")]
layout_mode = 2
size_flags_vertical = 3

[node name="ControlsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SizeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2
text = "Canvas Size"

[node name="SizeHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2

[node name="WidthLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer/SizeHBox"]
layout_mode = 2
text = "W:"

[node name="WidthSpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer/SizeHBox"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 2048.0
value = 512.0
step = 1.0

[node name="HeightLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer/SizeHBox"]
layout_mode = 2
text = "H:"

[node name="HeightSpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer/SizeHBox"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 2048.0
value = 512.0
step = 1.0

[node name="ApplySizeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer/SizeHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Apply Size"

[node name="BrushLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2
text = "Brush Size"

[node name="BrushSizeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 50.0
value = 5.0
tick_count = 10
ticks_on_borders = true

[node name="BrushSizeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Size: 5"
horizontal_alignment = 1

[node name="ColorLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2
text = "Brush Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer"]
unique_name_in_owner = true
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="PixelPerfectCheck" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pixel Perfect (No Blur)"

[node name="ButtonsHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ClearButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer/ButtonsHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Clear"

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer/ButtonsHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="LoadButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ControlsContainer/ButtonsHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Load"
